fix: Fix broken styles for addEqu

--- a/src/routes/Dashboard/routes/Me/routes/add-equipment/containers/AddEquipment.scss
+++ b/src/routes/Dashboard/routes/Me/routes/add-equipment/containers/AddEquipment.scss
@@ -22,3 +22,8 @@
     display: none;
   }
 }
+
+.icon-button {
+  border: none;
+  background: none;
+}
